/*
 * This file is part of OrangeHRM
 *
 * Copyright (C) 2020 onwards OrangeHRM (https://www.orangehrm.com/)
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

import 'react-native';
import React from 'react';
import Text from 'components/DefaultText';
import {Provider} from 'react-redux';
import configureStore from 'store/configureStore';
import {render} from 'react-native-testing-library';
const mockStore = configureStore();

describe('components/DefaultText', () => {
  test('test DefaultText component', () => {
    const node = render(
      <Provider store={mockStore}>
        <Text>{'Test'}</Text>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });

  test('test DefaultText component: check bold', () => {
    const node = render(
      <Provider store={mockStore}>
        <Text bold>{'Test'}</Text>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });

  test('test DefaultText component: check nested', () => {
    const node = render(
      <Provider store={mockStore}>
        <Text style={{color: 'orange'}}>
          {'Test'}
          <Text nested>{'Test'}</Text>
        </Text>
        <Text style={{color: 'orange'}}>
          {'Test'}
          <Text>{'Test'}</Text>
        </Text>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });
});
