// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/DefaultText test DefaultText component 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#818181",
      },
      undefined,
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`components/DefaultText test DefaultText component: check bold 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#818181",
      },
      Object {
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`components/DefaultText test DefaultText component: check nested 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "color": "#818181",
        },
        undefined,
        Object {
          "color": "orange",
        },
      ]
    }
  >
    Test
    <Text
      style={
        Array [
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Test
    </Text>
  </Text>,
  <Text
    style={
      Array [
        Object {
          "color": "#818181",
        },
        undefined,
        Object {
          "color": "orange",
        },
      ]
    }
  >
    Test
    <Text
      style={
        Array [
          Object {
            "color": "#818181",
          },
          undefined,
          undefined,
        ]
      }
    >
      Test
    </Text>
  </Text>,
]
`;
